--- a/FileChecks/Views/Home/Index.cshtml
+++ b/FileChecks/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	ViewData["Title"] = "Home Page";
 }
+@model FileChecks.Models.FolderInput;
 
 <!DOCTYPE html>
 <html lang="cs">
@@ -12,6 +13,11 @@
 
 <body>
 	<div class="form-group mt-3">
+		<div class="mb-3">
+			<label asp-for="FolderPath" class="form-label"></label>
+			<input asp-for="FolderPath" class="form-control" placeholder="path in C:\MyFolder" />
+			<span asp-validation-for="FolderPath" class="text-danger"></span>
+		</div>
 		<form asp-controller="FolderCheck" asp-action="Index" method="get">
 			<input type="submit" value="Scan files" class="btn btn-primary" />
 		</form>
