--- a/FileChecks/wwwroot/css/site.css
+++ b/FileChecks/wwwroot/css/site.css
@@ -29,3 +29,8 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.deleted-row td {
+    text-decoration: line-through;
+    color: silver;
+}
