--- a/FileChecks/Views/Home/Index.cshtml
+++ b/FileChecks/Views/Home/Index.cshtml
@@ -13,12 +13,12 @@
 
 <body>
 	<div class="form-group mt-3">
-		<div class="mb-3">
-			<label asp-for="FolderPath" class="form-label"></label>
-			<input asp-for="FolderPath" class="form-control" placeholder="path in C:\MyFolder" />
-			<span asp-validation-for="FolderPath" class="text-danger"></span>
-		</div>
-		<form asp-controller="FolderCheck" asp-action="Index" method="get">
+		<form asp-controller="FolderCheck" asp-action="Index" method="post">
+			<div class="mb-3">
+				<label asp-for="FolderPath" class="form-label"></label>
+				<input asp-for="FolderPath" class="form-control" placeholder="path in C:\MyFolder" />
+				<span asp-validation-for="FolderPath" class="text-danger"></span>
+			</div>
 			<input type="submit" value="Scan files" class="btn btn-primary" />
 		</form>
 	</div>
