Renaming VersionManager to VersionsViewModel

--- a/FileChecks/Views/FolderCheck/Index.cshtml
+++ b/FileChecks/Views/FolderCheck/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@* @model FileChecks.Models.VersionManager *@
 @* @model IReadOnlyList<FileChecks.Models.VersionManager.Directories> *@
-@model FileChecks.Models.VersionManager
+@model FileChecks.Models.VersionsViewModel
 
 <!DOCTYPE html>
 
