Revert "Renaming VersionManager to VersionsViewModel"
This reverts commit 3f377f7599ec96635ae81bb235ac58a19475105b.

--- a/FileChecks/Views/FolderCheck/Index.cshtml
+++ b/FileChecks/Views/FolderCheck/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@* @model FileChecks.Models.VersionManager *@
 @* @model IReadOnlyList<FileChecks.Models.VersionManager.Directories> *@
-@model FileChecks.Models.VersionsViewModel
+@model FileChecks.Models.VersionManager
 
 <!DOCTYPE html>
 
