Updating VersionManager to only scan selected folder

--- a/FileChecks/Views/Home/Index.cshtml
+++ b/FileChecks/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 				<input asp-for="SubFolderPath" class="form-control" placeholder="path in C:\MyFolder" />
 				<span asp-validation-for="SubFolderPath" class="text-danger"></span>
 			</div>
-			<input type="submit" value="Scan files" class="btn btn-primary" />
+			<input type="submit" value="Scan folders" class="btn btn-primary" />
 		</form>
 	</div>
 </body>
